tests/machine/x/c/values_builtin.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/values_builtin.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/values_builtin.c:49:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   49 |   map_int_bool_put(&_t1, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/values_builtin.c:28:51: note: expected ‘int’ but argument is of type ‘char *’
   28 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/values_builtin.c:50:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   50 |   map_int_bool_put(&_t1, "b", 2);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/values_builtin.c:28:51: note: expected ‘int’ but argument is of type ‘char *’
   28 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/values_builtin.c:51:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   51 |   map_int_bool_put(&_t1, "c", 3);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/values_builtin.c:28:51: note: expected ‘int’ but argument is of type ‘char *’
   28 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/values_builtin.c:52:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   52 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/values_builtin.c:53:18: warning: implicit declaration of function ‘values’ [-Wimplicit-function-declaration]
   53 |   printf("%d\n", values(m));
      |                  ^~~~~~

   1: #include <stdio.h>
